--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,26 @@ jobs:
   include:
     - stage: deploy
       name: Deployment
-      script: python setup.py sdist
+      script: python setup.py sdist bdist bdist_wheel
       deploy:
         - provider: releases
           api_key: $GITHUB_OAUTH_TOKEN
+          file_glob: true
+          file: "dist/*"
+          skip_cleanup: true
+          prerelease: true
+          on:
+            tags: true
+            condition: $TRAVIS_TAG =~ ^.*dev.*$
+
+        - provider: releases
+          api_key: $GITHUB_OAUTH_TOKEN
+          file_glob: true
           file: "dist/*"
           skip_cleanup: true
           on:
             tags: true
+            condition: $TRAVIS_TAG =~ ^[0-9.]*$
 
         - provider: pypi
           user: "bontiv"
