--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
           prerelease: true
           on:
             tags: true
-            condition: $TRAVIS_TAG =~ ^.*dev.*$
+            condition: $TRAVIS_TAG =~ ^v.*dev.*$
 
         - provider: releases
           api_key: $GITHUB_OAUTH_TOKEN
@@ -47,7 +47,7 @@ jobs:
           skip_cleanup: true
           on:
             tags: true
-            condition: $TRAVIS_TAG =~ ^[0-9.]*$
+            condition: $TRAVIS_TAG =~ ^v[0-9.]*$
 
         - provider: pypi
           user: "bontiv"
@@ -61,7 +61,7 @@ jobs:
           password: $PYPI_PASSWORD
           on:
             tags: true
-            condition: $TRAVIS_TAG =~ ^[0-9.]*$
+            condition: $TRAVIS_TAG =~ ^v[0-9.]*$
 
       if: tag IS present
 
