--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ jobs:
       deploy:
         provider: pages
         skip-cleanup: true
-        gitub-token: $GITHUB_OAUTH_TOKEN
+        github-token: $GITHUB_OAUTH_TOKEN
         local-dir: build/html
         on:
           branch: master
