--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,12 +7,16 @@ SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = IoT-UPnP
 SOURCEDIR     = .
 BUILDDIR      = ../build
+SPHINX_APIDOC_OPTIONS=members
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 .PHONY: help Makefile
+
+apidoc:
+	sphinx-apidoc -e -f --ext-coverage -o $(SOURCEDIR) ../upnp/
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
