--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,4 @@ sonar.links.homepage=https://github.com/bontiv/iot-upnp
 sonar.links.ci=https://travis-ci.org/bontiv/iot-upnp/
 sonar.links.scm=https://github.com/bontiv/iot-upnp
 sonar.links.issue=https://github.com/bontiv/iot-upnp/issues
+sonar.python.coverage.reportPath=build/coverage.xml
