--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ jobs:
       name: "Code Quality"
       dist: trusty
       language: java
+      before_install: sudo apt-get install -qq python3
       script:
         - coverage run setup.py test
         - coverage xml
