--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.6"
 install:
   - python3 setup.py -q install
+  - pip3 install setuptools
   - pip3 install coverage
 script:
   - python setup.py build
