--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - pip3 install setuptools
   - python3 setup.py -q install
   - pip3 install coverage
 script:
@@ -33,7 +32,7 @@ jobs:
       name: "Code Quality"
       dist: trusty
       language: java
-      before_install: sudo apt-get install -qq python3
+      before_install: sudo apt-get install -qq python3 python3-setuptools
       script:
         - python3 -m coverage run setup.py test
         - python3 -m coverage xml
