Add pip in deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
       name: "Code Quality"
       dist: trusty
       language: java
-      before_install: sudo apt-get install -qq python3 python3-setuptools
+      before_install: sudo apt-get install -qq python3 python3-pip python3-setuptools
       script:
         - python3 -m coverage run setup.py test
         - python3 -m coverage xml
