--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ jobs:
       language: java
       before_install: sudo apt-get install -qq python3 python3-pip python3-setuptools
       script:
+        - python3 setup.py -v test
         - python3 -m coverage run setup.py test
+        - python3 -m unittest
         - python3 -m coverage xml
         - sonar-scanner -Dsonar.projectVersion=$TRAVIS_TAG
       addons:
