--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - sudo apt-get install -qq python3 python3-pip
+  - sudo apt-get install -qq python3 python3-pip python3-pytest python3-pytest-cov
   - sudo pip3 install --upgrade pip setuptools pytest pytest-cov
   - sudo python3 setup.py -q install
 script:
-  - python3 -m pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
+  - pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
