--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - sudo apt-get install -qq python3 python3-pip python3-pytest python3-pytest-cov
+  - sudo apt-get install -qq python3 python3-pip python3-pytest
   - sudo pip3 install --upgrade pip setuptools pytest pytest-cov
   - sudo python3 setup.py -q install
 script:
