--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - sudo apt-get install -qq python3 python3-pip python3-pytest
-  - sudo pip3 install --upgrade pip setuptools pytest pytest-cov
-  - sudo python3 setup.py -q install
+  - pip install --upgrade pip setuptools pytest pytest-cov
+  - python setup.py -q install
 script:
   - pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
 
@@ -31,6 +30,8 @@ jobs:
       name: "Code Quality"
       dist: trusty
       language: java
+      before_install:
+        - sudo apt-get install -qq python3 python3-pip python3-pytest
       script:
         - python3 -m pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
         - sonar-scanner -Dsonar.projectVersion=$TRAVIS_TAG
