--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ jobs:
       language: java
       before_install:
         - sudo apt-get install -qq python3 python3-pip python3-pytest
+      install:
+        - pip3 install --upgrade --user pip setuptools pytest pytest-cov
       script:
         - python3 -m pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
         - sonar-scanner -Dsonar.projectVersion=$TRAVIS_TAG
