--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ jobs:
         - sudo apt-get install -qq python3 python3-pip python3-pytest
       install:
         - pip3 install --upgrade --user pip setuptools pytest pytest-cov
+        - python3 setup.py -q install --user
       script:
         - python3 -m pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
         - sonar-scanner -Dsonar.projectVersion=$TRAVIS_TAG
