--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,7 @@ build:
 python:
   version: 3.6
   setup_py_install: true
+  extra_requirements:
+    - docs
 
-requirements_file:
-  docs/requirements.txt
+requirements_file: docs/requirements.txt
