--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
       dist: trusty
       language: java
       before_install:
-        - sudo apt-get install -qq python3 python3-pip python3-pytest
+        - sudo apt-get install -qq python3 python3-pip python3-pytest pylint3
       install:
         - pip3 install --upgrade --user pip setuptools pytest pytest-cov
         - python3 setup.py -q install --user
