--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,6 @@ sonar.links.homepage=https://github.com/bontiv/iot-upnp
 sonar.links.ci=https://travis-ci.org/bontiv/iot-upnp/
 sonar.links.scm=https://github.com/bontiv/iot-upnp
 sonar.links.issue=https://github.com/bontiv/iot-upnp/issues
+
 sonar.python.coverage.reportPath=coverage.xml
+sonar.python.pylint=pylint3
