Pylint3 not available on trusty

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,4 @@ sonar.links.scm=https://github.com/bontiv/iot-upnp
 sonar.links.issue=https://github.com/bontiv/iot-upnp/issues
 
 sonar.python.coverage.reportPath=coverage.xml
-sonar.python.pylint=pylint3
+sonar.python.pylint=pylint
