--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,7 @@ jobs:
         - python3 setup.py -q install --user
       script:
         - python3 -m pytest --cov-branch --cov=./ --cov-report=xml:coverage.xml
-        - which pylint
-        - pylint upnp > pylint.txt || true
+        - pylint --rcfile=.pylintrc upnp > pylint.txt || true
         - sonar-scanner -Dsonar.projectVersion=$TRAVIS_TAG
       addons:
         sonarcloud:
