--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,4 @@ sonar.links.issue=https://github.com/bontiv/iot-upnp/issues
 sonar.python.coverage.reportPath=coverage.xml
 sonar.python.pylint=pylint
 sonar.python.pylint.reportPath=pylint.txt
+sonar.python.pylint_config=.pulintrc
